@@ -6,7 +6,7 @@ phpipam has the following requirements to run:
 
     - Apache2 web server
     - Mysql server (5.1+)
-    - PHP version 5.3+ with following modules
+    - PHP version 5.2+ with following modules (on Windows php 5.3 is required!)
         + + mysqli              : Adds support for the improved mySQL libraries
         + + session             : Adds persistent session support
         + + gmp                 : Adds support for dev-libs/gmp (GNU MP library) -> to calculate IPv6 networks
