@@ -28,7 +28,7 @@ Requirements
 ============
 - Apache2 web server with php support
 - Mysql server (5.1+)
-- PHP version 5.2+ with following modules
+- PHP version 5.2+ with following modules (On windows php 5.3 is required!)
 	+ + mysqli              : Adds support for the improved mySQL libraries
     + + session             : Adds persistent session support
     + + gmp                 : Adds support for dev-libs/gmp (GNU MP library) -> to calculate IPv6 networks
